--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,40 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board{
+  background-color: aliceblue;
+  border-radius: 15px;
+  margin: 20px;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row{
   display: flex;
-  flex-direction: column;
+  justify-content:  space-evenly;
+  align-items: center;
+}
+
+.cell{
+  font-size:xx-large;
+  font-family: 'Courier New', Courier, monospace;
+  padding: 15px;
+  font-weight: 300;
+  border: 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+}
+
+.grid{
+  margin: 20px;
+  padding: 20px;
+}
+
+body{
+  background-color: black;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
